# OpenMix

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: auto-release.yml  build.yml
docs/: AUTOUPDATE.md
libs/RtMidi/: RtMidi.cpp  RtMidi.h
packaging/: Info.plist.in  openmix.desktop  openmix.icns  openmix.rc
resources/: resources.qrc
resources/styles/: main.qss
src/: main.cpp
src/app/: Application.cpp  Application.h  AutoUpdater.cpp  AutoUpdater.h  AutoUpdaterSparkle.mm  CuePlayerClient.cpp  CuePlayerClient.h  MoveToApplications.mm  OscRemoteServer.cpp  OscRemoteServer.h  QLabClient.cpp  QLabClient.h  ReaperClient.cpp  ReaperClient.h  ScsClient.cpp  ScsClient.h  UpdateChecker.cpp  UpdateChecker.h
src/core/: Actor.cpp  Actor.h  ActorProfile.cpp  ActorProfile.h  ActorProfileLibrary.cpp  ActorProfileLibrary.h  AppLogger.cpp  AppLogger.h  ChannelMonitor.cpp  ChannelMonitor.h  ChannelUtilisation.cpp  ChannelUtilisation.h  ChannelUtilization.cpp  ChannelUtilization.h  ConnectionLogBridge.cpp  ConnectionLogBridge.h  ConsoleNameCache.cpp  ConsoleNameCache.h  Cue.cpp  Cue.h  CueList.cpp  CueList.h  CueValidator.cpp  CueValidator.h  CueZero.cpp  CueZero.h  DCAMapping.cpp  DCAMapping.h  DryRunEngine.cpp  DryRunEngine.h  Ensemble.cpp  Ensemble.h  FadeConflictResolver.cpp  FadeConflictResolver.h  FadeCurve.h  FadeEngine.cpp  FadeEngine.h  FxLibrary.cpp  FxLibrary.h  LevelDb.h  (+26 more)
src/io/: AutosaveManager.cpp  AutosaveManager.h  CrashRecovery.cpp  CrashRecovery.h  ProjectFile.cpp  ProjectFile.h  ProjectMigration.cpp  ProjectMigration.h  TmixImporter.cpp  TmixImporter.h
src/midi/: MidiControlMapping.cpp  MidiControlMapping.h  MidiInputManager.cpp  MidiInputManager.h  MscParser.h  MtcParser.h
src/protocol/: LoopbackProtocol.cpp  LoopbackProtocol.h  MixerCapabilities.cpp  MixerCapabilities.h  MixerProtocol.cpp  MixerProtocol.h  ProtocolFactory.cpp  ProtocolFactory.h  X32Protocol.cpp  X32Protocol.h
src/protocol/allenheath/: AllenHeathMidiProtocol.cpp  AllenHeathMidiProtocol.h  AllenHeathTcpProtocol.cpp  AllenHeathTcpProtocol.h  AvantisProtocol.cpp  AvantisProtocol.h  DLiveProtocol.cpp  DLiveProtocol.h  GLDProtocol.cpp  GLDProtocol.h  QuProtocol.cpp  QuProtocol.h  SQProtocol.cpp  SQProtocol.h
src/protocol/behringer/: WingProtocol.cpp  WingProtocol.h  X32Protocol.cpp  X32Protocol.h
src/protocol/digico/: DiGiCoProtocol.cpp  DiGiCoProtocol.h
src/protocol/discovery/: ConsoleDiscoveryService.cpp  ConsoleDiscoveryService.h  DiscoveredConsole.cpp  DiscoveredConsole.h  OscProbeStrategy.h
src/protocol/discovery/probes/: AllenHeathProbeStrategy.cpp  AllenHeathProbeStrategy.h  BehringerWingProbeStrategy.cpp  BehringerWingProbeStrategy.h  BehringerX32ProbeStrategy.cpp  BehringerX32ProbeStrategy.h  YamahaOscProbeStrategy.cpp  YamahaOscProbeStrategy.h  YamahaYsdpProbeStrategy.cpp  YamahaYsdpProbeStrategy.h
src/protocol/transport/: OscTransport.cpp  OscTransport.h  TcpTransport.cpp  TcpTransport.h
src/protocol/yamaha/: YamahaCLProtocol.cpp  YamahaCLProtocol.h  YamahaDM7Protocol.cpp  YamahaDM7Protocol.h  YamahaProtocol.cpp  YamahaProtocol.h  YamahaQLProtocol.cpp  YamahaQLProtocol.h  YamahaTFProtocol.cpp  YamahaTFProtocol.h  YamahaTcpProtocol.cpp  YamahaTcpProtocol.h
src/ui/: ActiveCueInfoPanel.cpp  ActiveCueInfoPanel.h  ActorGroupIo.h  ActorSetupPanel.cpp  ActorSetupPanel.h  AllocateSpareDialog.cpp  AllocateSpareDialog.h  BubbleBar.cpp  BubbleBar.h  BubbleButton.cpp  BubbleButton.h  CastTextParse.h  ChannelStripPanel.cpp  ChannelStripPanel.h  ChannelUtilisationDialog.cpp  ChannelUtilisationDialog.h  ChannelUtilizationDialog.cpp  ChannelUtilizationDialog.h  CollapsibleSection.cpp  CollapsibleSection.h  ConnectionPanel.cpp  ConnectionPanel.h  ConnectionStateWidget.cpp  ConnectionStateWidget.h  ConsoleDiscoveryWidget.cpp  ConsoleDiscoveryWidget.h  CueConfidenceIndicator.cpp  CueConfidenceIndicator.h  CueEditor.cpp  CueEditor.h  CueFilterBar.cpp  CueFilterBar.h  CueFilterProxyModel.cpp  CueFilterProxyModel.h  CueItemDelegates.cpp  CueItemDelegates.h  CueListView.cpp  CueListView.h  CueTableModel.cpp  CueTableModel.h  (+63 more)
src/ui/theme/: Icons.h  Theme.cpp  Theme.h
tests/: CMakeLists.txt  test_actor_profiles.cpp  test_allenheath_midi.cpp  test_allenheath_parsing.cpp  test_allenheath_session.cpp  test_bubble_button.cpp  test_cast_text_parse.cpp  test_channel_monitor.cpp  test_channel_utilisation.cpp  test_channel_utilization.cpp  test_console_discovery.cpp  test_console_name_cache.cpp  test_cue.cpp  test_cue_table_model.cpp  test_cuelist.cpp  test_cueplayer_client.cpp  test_cuezero.cpp  test_dca_grid_nav.cpp  test_dca_override_strip.cpp  test_delete_playing_cue.cpp  test_digico_protocol.cpp  test_ensembles.cpp  test_fade_engine.cpp  test_fadeconflictresolver.cpp  test_fx_library.cpp  test_liveeditsession.cpp  test_midi_config_dialog.cpp  test_midi_mute.cpp  test_mixer_capabilities.cpp  test_msc.cpp  test_mtc.cpp  test_osc_remote.cpp  test_osc_transport.cpp  test_playback_dca_assign.cpp  test_playback_profiles.cpp  test_popout_window.cpp  test_position.cpp  test_previewlayer.cpp  test_qlab_client.cpp  test_reaper_client.cpp  (+10 more)
